<resources>
    <string name="wait_minute">Wait a minute...</string>
    <string name="app_name">Slamtk</string>
    <string name="English">english</string>
    <string name="Arabic">عربي</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Phone_number_hint">9751237</string>
    <string name="Password">Password</string>
    <string name="Password_hint">.........</string>
    <string name="Remember_me">Remember Me</string>
    <string name="Forget_Password">Forget Password ?</string>
    <string name="login_btn">Log in</string>
    <string name="Sing_up_link_btn">Sign Up</string>
    <string name="dont_have_an_account_already">Don\'t have an account already?</string>
    <string name="Login_layout_name">LOG IN</string>
    <string name="singup_layout_name">SIGN UP</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_hint">Noor Ali</string>
    <string name="otp_send_popup">Verification code will be sent to the \n entered number to verify the \n owner of the number</string>
    <string name="forget_password_layout_name">Forget Password ?</string>
    <string name="enter_your_phone_number">Enter your phone number to retrieve your password </string>
    <string name="otp_send_btn">Send Verification Code</string>
    <string name="not_send_otp">Didn\'t you get the secret code? </string>
    <string name="resend_otp_link">Resend on</string>
    <string name="enter_otp">Enter the Verification Code</string>
    <string name="enter_the_code_sent_phone">Enter the code sent to your Phone</string>
    <string name="verify_btn">Verify</string>
    <string name="not_receive">Didn\'t you receive a code?</string>
    <string name="reset_password">Reset Password</string>
    <string name="successfully">Reset Password Successfully</string>
    <string name="reset">Reset your password to recovery &amp; login to your account</string>
    <string name="new_check">New Examination</string>
    <string name="previous_examinations">Previous Examinations</string>
    <string name="hello">Hello !</string>
    <string name="Noor">Noor Ali</string>
    <string name="newborn_information">Newborn Information</string>
    <string name="baby_name">Baby Full Name</string>
    <string name="baby_name_hint">Baby full name</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="birth_date">Birth Date</string>
    <string name="birth_date_hint">Birth date</string>
    <string name="birth_time">Birth Time</string>
    <string name="birth_time_hint"> Birth time </string>
    <string name="genstational_age">Gestational Age</string>
    <string name="genstational_age_hint">Gestational age</string>
    <string name="any">Any</string>
    <string name="risk_factor">risk factors ?</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="risk_factor_popup">Risk Factors</string>
    <string name="risk_factor1">1. Inadequate breastfeeding/dehydration</string>
    <string name="risk_factor2">2. Mothers with blood group O / Rhesus /n negative</string>
    <string name="risk_factor3">3. History of sibling with severe neonatal /n jaundice or exchange transfusion.</string>
    <string name="notedescription">If there is at least one condition compatible with the condition of your newborn, put yes</string>
    <string name="note">Warning : </string>
    <string name="submit">Submit</string>
    <string name="forehead">Forehead Picture</string>
    <string name="next">Next</string>
    <string name="Sternum">Sternum Picture</string>
    <string name="view_result">View Result</string>
    <string name="result_bili">Result of bilirubin</string>
    <string name="measuring_unit">Mmol/L</string>
    <string name="High_risk">High Risk</string>
    <string name="low_risk">Low Risk</string>
    <string name="medium_risk">Medium Risk</string>
    <string name="Recommendations">Recommendations</string>
    <string name="previous_examinations_btn">previous examinations</string>
    <string name="account">Account</string>
    <string name="Personal_info">Personal Information</string>
    <string name="Privacy">Privacy</string>
    <string name="help">Help Center</string>
    <string name="Language">Language</string>
    <string name="log_out_btn">Log Out</string>
    <string name="name">Ali sami Naser</string>
    <string name="sample_date">Sample Date: </string>
    <string name="bili_rate">Bilirubin Rate: </string>
    <string name="edit">Edit</string>
    <string name="current_pass">Confirm Password</string>
    <string name="New_pass">New Password</string>
    <string name="english_lan">English(United States)</string>
    <string name="arabic_lan">العربية(فلسطين)</string>
    <string name="exit">Exit</string>
    <string name="baby_name_empty">Please enter the name of the newborn</string>
    <string name="baby_name_error">The name must contain letters only</string>
    <string name="birth_date_empty">Please enter the birth date of the newborn</string>
    <string name="return_btn">Return</string>
    <string name="choose">Choose a weeks </string>
    <string name="option1">35 weeks</string>
    <string name="option2">36 weeks</string>
    <string name="option3">37 weeks</string>
    <string name="option4">38 weeks</string>
    <string name="option5">39 weeks</string>
    <string name="option6">+40 weeks</string>
    <string name="tv_didnot_get_secret_code">Didn\'t you get the secret  code?</string>
    <string name="empty">Make sure to enter all data</string>
    <string name="emptylang">Make sure to choose any language</string>
    <string name="noIntrnet">Make sure the internet is connected</string>
    <string name="validatename">The name must contain only characters</string>
    <string name="validatephone">Enter only 7 numbers</string>
    <string name="validatepassword">Password must contain at least 8 characters and numbers</string>
    <string name="invalidOtp">The verification code entered was invalid</string>
    <string name="alreadyhaveaccount">You already have an account, login directly</string>
    <string name="successfullysignup">Account successfully created</string>
    <string name="have_account_already">have an account already?</string>
    <string name="login_txt">login</string>
    <string name="successfullylogin">Logged in successfully</string>
    <string name="wrongpassword">The password is wrong</string>
    <string name="account_login">Don\'t have an account, create one for yourself.</string>
    <string name="cancel">Cancel</string>
    <string name="modified_successfully">The data has been modified successfully</string>
    <string name="empty_phone">Make sure to enter phone number</string>
    <string name="empty_password">Make sure to enter password</string>
    <string name="change_password">Password reset successfully</string>
    <string name="confirm_password">The password has already been used, change it</string>
    <string name="notequal_password">The passwords do not match</string>
    <string name="logoutToast">The account has been signed out</string>
    <string name="notPassExist">The phone number does not exist Check the number or create an account</string>
    <string name="PhoneExist">The number is used by someone else, you cannot use it.</string>
    <string name="required">This field is required * </string>
    <string name="resendon">Wait for some time for the verification code to be sent to you</string>
    <string name="fail">Account creation failed</string>
    <string name="faillogin">Login failed</string>
    <string name="fail_changePass">Password change failed</string>
    <string name="alreadyphone">The phone number is used, use another number</string>
    <string name="wait">Wait for a few seconds</string>
    <string name="tryagain">There was a problem sending the code, try again</string>
    <string name="firstTermPhone">Choose the beginning of the phone number</string>
    <string name="helpQusetion1">How will parents benefit from the application?</string>
    <string name="helpAnswer1">The application is designed and programmed to predict the value of bilirubin responsible for Jaundice disease in newborns from the age of two to 14 days, and to give recommendations to parents to help them reduce the percentage of Jaundice in newborns. It is considered a simulation of the device used in the hospital.</string>
    <string name="helpQuestion2">Are the test results in the app accurate?</string>
    <string name="helpAnswer2">The accuracy of the application is excellent and reliable</string>
    <string name="helpQuestion3">Is the app free?</string>
    <string name="helpAnswer3">Yes, the application is free and does not need to pay any money to obtain the examination service or track the status of the newborn.</string>
    <string name="helpQuestion4">What are the most important services in the application?</string>
    <string name="helpAnswer4">The most important services lie in obtaining the result of the estimated bilirubin level in the newborn, and also the presence of a medical record for the newborn containing the dates of the previous examinations that the newborn had carried out, the percentage of jaundice, and also the recommendations that must be carried out by the parents.</string>
    <string name="helpQuestion5">Is the inspection service available at all times?</string>
    <string name="helpAnswer5">Yes, as parents can use the application 24 hours a day, 7 days a week, to check their children and check their Jaundice level.</string>
    <string name="helpQuestion6">Does the application service include any updates, additional features, or fixing technical problems?</string>
    <string name="helpAnswer6">Yes, the application will be developed with new features and characteristics periodically, and your application will be updated automatically when any new feature or feature is added.</string>
    <string name="helpQuestion7">Does the application support all operating systems?</string>
    <string name="helpAnswer7">The app only supports Android and can be downloaded from the Google play store</string>
    <string name="riskType">Risk Type: </string>
    <string name="close">Close</string>
    <string name="invalid">Invalid date! Try Again</string>
    <string name="invaliage">The age of the newborn is not supported by the application in the examination. \n It should be between 2 and 14 days old</string>
    <string name="fail_change">Data change failed</string>
    <string name="change_data">Data reset successfully</string>
    <string name="phoneExist">Another user\'s mobile number that you cannot use</string>
    <string name="helpQuestion8">Are there certain conditions for doing the examination?</string>
    <string name="helpAnswer8">Yes, the newborn must be from two to 14 days old </string>
    <string name="success_save_baby">The baby\'s information has been added successfully</string>
    <string name="fail_save_baby">The process of adding the birth information was not completed successfully, try again</string>
    <string name="bilirate">We found that the bilirubin result is equal</string>
    <string name="recommendationHigh1">Consult a healthcare professional</string>
    <string name="recommendationHigh2">Increase breastfeeding frequency</string>
    <string name="recommendationHigh3">Follow recommended phototherapy</string>
    <string name="recommendationMeduim1">Frequent breastfeeding</string>
    <string name="recommendationMeduim2">Regular follow-up appointments with healthcare professional</string>
    <string name="recommendationMeduim3">Monitor baby\'s feeding and output</string>
    <string name="recommendationLow1">Follow regular check-ups</string>
    <string name="recommendationLow2">Monitor baby\'s feeding and output</string>
    <string name="recommendationLow3">regular breastfeeding or formula feeding</string>
</resources>