<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login_layout_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_19ssp"
            android:fontFamily="@font/poppins_semi_bold_en"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_32sdp"
            />

        <TextView
            android:id="@+id/textView_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/poppins_medium_en"
            android:text="@string/Phone_Number"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_8sdp">

            <Spinner
                android:id="@+id/spinner_first_term_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:dropDownVerticalOffset="@dimen/_42sdp"
                android:contentDescription="Chose first term phone 056 or 059"
                android:background="@drawable/custom_spinner_phone"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_8sdp"/>

            <EditText
                android:id="@+id/editText_phone_number_login"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_weight="3"
                android:background="@drawable/edit_text_box"
                android:ems="7"
                android:fontFamily="@font/poppins_medium_en"
                android:gravity="center"
                android:inputType="phone"
                android:paddingStart="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textColorHint="@color/Echo_Blue"
                android:textSize="@dimen/_13ssp"
                tools:ignore="RtlCompat" />
        </LinearLayout>
        <TextView
            android:id="@+id/textView_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium_en"
            android:textSize="@dimen/_13ssp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_16sdp"/>

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password"
                android:drawablePadding="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:textColorHint="@color/Echo_Blue"
                android:textColor="@color/black"
                android:longClickable="false"
                android:paddingStart="@dimen/_10sdp"
                android:background="@drawable/edit_text_box"
                android:paddingEnd="@dimen/_10sdp"
                android:textSize="@dimen/_13ssp"
                android:fontFamily="@font/poppins_medium_en"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:drawableEnd="@drawable/eye_slash_password"
                android:inputType="textPassword" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox_remember"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_weight="1"
                android:button="@drawable/checkbox"
                android:fontFamily="@font/poppins_medium_en"
                android:paddingStart="@dimen/_5sdp"
                android:text="@string/Remember_me"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp" />

            <TextView
                android:id="@+id/textView_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/red"
                android:fontFamily="@font/poppins_medium_en"
                android:textSize="@dimen/_9ssp"
                android:gravity="center"
                android:text="@string/Forget_Password" />
        </LinearLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/english_shape"
            android:fontFamily="@font/poppins_medium_en"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView_dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular_en"
                android:gravity="center"
                android:text="@string/dont_have_an_account_already"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/textView_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/poppins_regular_en"
                android:text="@string/Sing_up_link_btn"
                android:textColor="@color/Tangerine_Yellow"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>